<resources>
    <string name="app_name">Calcuradora RM</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">campo requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="No_tienes_cuenta_text">"¿No tienes cuenta?"</string>
    <string name="registrarse_text">"Registrarse aqui"</string>
    <string name="name_text">"Nombre"</string>
    <string name="lastname_text">Apellido</string>
    <string name="registry_text">Registrar</string>
    <string name="icono_de_usuario">icono de usuario</string>
    <string name="size_person">Talla</string>
    <string name="age_person">Edad</string>
    <string name="title_activity_main_">Calculadora RM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update">Actualizar</string>
    <string name="title_activity_graphic">Graphic</string>
    <string name="title_activity_graficos">Grafico</string>
    <string name="title_activity_save">Guardar</string>
    <string name="title_activity_historial">Historial</string>
</resources>
